// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`STextArea doesnt change value when inactive 1`] = `
<div class="s-text-area s-input s-input--inactive"><span class="s-input__label">Text Area</span>
  <!----> <textarea disabled="disabled" placeholder="" class="s-input__input s-input__textarea s-input__textarea--with-label" style="height: auto;"></textarea>
  <!---->
</div>
`;

exports[`STextArea doesnt change value when read only 1`] = `
<div class="s-text-area s-input"><span class="s-input__label s-input__label--aside">Text Area</span>
  <!----> <textarea readonly="readonly" placeholder="" class="s-input__input s-input__textarea s-input__textarea--with-label" style="height: auto;"></textarea>
  <!---->
</div>
`;

exports[`STextArea renders empty text field 1`] = `
<div class="s-text-area s-input"><span class="s-input__label">Text Area</span>
  <!----> <textarea rows="10" placeholder="" class="s-input__input s-input__textarea s-input__textarea--with-label"></textarea>
  <!---->
</div>
`;

exports[`STextArea renders text field with text 1`] = `
<div class="s-text-area s-input"><span class="s-input__label s-input__label--aside">Text Area</span>
  <!----> <textarea placeholder="" class="s-input__input s-input__textarea s-input__textarea--with-label" style="height: auto;"></textarea>
  <!---->
</div>
`;
